tests/NormalTests/paczka1/fuzzy1/19464557.err
Error in line 2: ESrJTjWvCzS S261 43,9
Error in line 1: Q3DGEl S261 20,5
Error in line 3: ESrJTjWvCzS A311 82,1
